# knowledge-os

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  knowledge.db
api/: Cargo.toml
api/src/: lib.rs
api/src/features/entity/: mod.rs
cli/: Cargo.toml
cli/features/prd-0001/: entity-management.feature  import.feature  search.feature
cli/features/prd-0002/: extended-import.feature  pdf-import.feature  resolution.feature
cli/src/: main.rs
cli/tests/: cucumber.rs  integration_test.rs
core/: Cargo.toml
core/knowledge-core/: Cargo.toml
core/knowledge-core/src/: lib.rs
core/knowledge-core/src/features/: mod.rs
core/knowledge-core/src/features/component/: mod.rs
core/knowledge-core/src/features/entity/: mod.rs
core/knowledge-core/src/features/relationship/: mod.rs
core/knowledge-core/src/ports/: mod.rs
core/knowledge-core/tests/: integration_test.rs
core/knowledge-derive/: Cargo.toml
core/knowledge-derive/src/features/search/: mod.rs
core/knowledge-import/: Cargo.toml
core/knowledge-import/src/features/importer/: adapter.rs  markdown.rs  mod.rs  pdf.rs  url.rs
core/knowledge-import/tests/: integration_test.rs
core/knowledge-storage/: Cargo.toml
core/knowledge-storage/src/: fuzzy.rs  lib.rs
core/knowledge-storage/src/adapters/sqlite/: mod.rs
core/knowledge-storage/tests/: integration_test.rs
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: Dockerfile  README.md  appendices.md  engineering-architecture.md  foundational-manifesto.md
docs/architecture/: README.md  ai.md  architectural-principles.md  compilation.md  composition.md  data-model.md  domain-model.md  events.md  extensibility.md  mental-model.md  overview.md  pipeline.md  scalability.md  storage.md  synchronization.md  ui-philosophy.md
docs/architecture/adrs/: README.md  adr-0001.md  adr-0002.md  adr-0003.md  adr-0004.md  adr-0005.md  adr-0006.md  adr-0007.md  adr-0008.md  adr-0009.md  adr-0010.md  adr-0011.md
docs/engineering/: README.md  api-specification.md  deployment.md  engineering-handbook.md  infrastructure-handbook.md  operational-runbooks.md  product-requirements.md  security.md  testing-strategy.md  ui-design-system.md
docs/engineering/prds/: prd-0001-core-entity-model.md  prd-0002-rich-import-and-resolution.md  prd-0003-graph-exploration-and-plugins.md
docs/guides/: README.md  ai-agent-guidelines.md  bdd-testing.md  plugin-development.md
docs/guides/tutorials/: build-custom-importer.md  first-import.md
docs/philosophy/: README.md  boundaries.md  engineering-principles.md  governance.md  open-infrastructure.md  philosophy.md  product-vision.md  vision.md
docs/reference/: README.md  glossary.md
docs/research/: landscape-2026.md
mobile/: app.json  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/knowledgemobile/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/KnowledgeMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/KnowledgeMobile.xcodeproj/: project.pbxproj
mobile/ios/KnowledgeMobile.xcodeproj/xcshareddata/xcschemes/: KnowledgeMobile.xcscheme
