[package]
name = "knowledge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
knowledge-core = { path = "../core/knowledge-core" }
knowledge-storage = { path = "../core/knowledge-storage" }
knowledge-import = { path = "../core/knowledge-import" }
knowledge-derive = { path = "../core/knowledge-derive" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
