[package]
name = "knowledge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kos"
path = "src/main.rs"

[dependencies]
knowledge-core = { path = "../core/knowledge-core" }
knowledge-storage = { path = "../core/knowledge-storage" }
knowledge-import = { path = "../core/knowledge-import" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
