[package]
name = "knowledge-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
knowledge-core = { path = "../knowledge-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
