[package]
name = "knowledge-import"
version = "0.1.0"
edition = "2021"

[dependencies]
knowledge-core = { path = "../knowledge-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
