[package]
name = "knowledge-desktop"
version = "0.1.0"
description = "Knowledge OS Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
knowledge-core = { path = "../../core/knowledge-core" }
knowledge-storage = { path = "../../core/knowledge-storage" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
